--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,202 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@article{choi2013guidelines,
+  title={Guidelines for older-adult-friendly online tutorial for Facebook: Content, design, and training principles},
+  author={Choi, Wonchan and Carranza, Julia and Fox, Melissa},
+  journal={Proceedings of the American Society for Information Science and Technology},
+  volume={50},
+  number={1},
+  pages={1--4},
+  year={2013},
+  publisher={Wiley Subscription Services, Inc., A Wiley Company Hoboken}
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{yang2016publication,
+  title={Publication and citation patterns of Korean LIS research by subject areas},
+  author={Yang, Kiduk and Lee, Jongwook and Choi, Wonchan},
+  journal={Malaysian Journal of Library and Information Science},
+  volume={21},
+  number={2},
+  pages={67--81},
+  year={2016}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
-}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
+@article{choi2014college,
+  title={How do college students choose mobile health/wellness applications?},
+  author={Choi, Wonchan and Stvilia, Besiki},
+  journal={Proceedings of the American Society for Information Science and Technology},
+  volume={51},
+  number={1},
+  pages={1--4},
+  year={2014},
   publisher={Wiley Online Library}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{stvilia2015mobile,
+  title={Mobile wellness application-seeking behavior by college students—An exploratory study},
+  author={Stvilia, Besiki and Choi, Wonchan},
+  journal={Library \& Information Science Research},
+  volume={37},
+  number={3},
+  pages={201--208},
+  year={2015},
+  publisher={Elsevier}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{choi2015new,
+  title={New framework of web credibility assessment and an exploratory study of older adults' information behavior on the Web},
+  author={Choi, Wonchan},
+  year={2015}
 }
 
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
+@article{choi2013use,
+  title={Use of mobile wellness applications and perception of quality},
+  author={Choi, Wonchan and Stvilia, Besiki},
+  journal={Proceedings of the American Society for Information Science and Technology},
+  volume={50},
+  number={1},
+  pages={1--4},
+  year={2013},
+  publisher={Wiley Subscription Services, Inc., A Wiley Company Hoboken}
+}
+
+@article{choi2017effective,
+  title={Effective use of user interface and user experience in an mHealth application},
+  author={Choi, Wonchan and Tulu, Bengisu},
+  year={2017}
+}
+
+@article{choi2015web,
+  title={Web credibility assessment: Conceptualization, operationalization, variability, and models},
+  author={Choi, Wonchan and Stvilia, Besiki},
+  journal={Journal of the Association for Information Science and Technology},
+  volume={66},
+  number={12},
+  pages={2399--2414},
+  year={2015}
+}
+
+@article{zheng2017using,
+  title={Using mHealth app to support treatment decision-making for knee arthritis: patient perspective},
+  author={Zheng, Hua and Tulu, Bengisu and Choi, Wonchan and Franklin, Patricia},
+  journal={Egems},
+  volume={5},
+  number={2},
+  pages={7},
+  year={2017}
+}
+
+@article{yang2015looking,
+  title={Looking beyond the numbers: Bibliometric approach to analysis of LIS research in Korea},
+  author={Yang, Kiduk and Lee, Jongwook and Choi, Wonchan},
+  journal={Journal of the Korean Society for Library and Information Science},
+  volume={49},
+  number={4},
+  pages={241--264},
+  year={2015},
+  publisher={Korean Society For Library And Information Science}
+}
+
+@incollection{choi2013makes,
+  title={What makes online health information credible for older adults? An exploratory study},
+  author={Choi, Wonchan},
+  booktitle={CHI'13 Extended Abstracts on Human Factors in Computing Systems},
+  pages={2671--2676},
+  year={2013}
+}
+
+@article{choi2019mhealth,
+  title={mHealth technologies for osteoarthritis self-management and treatment: A systematic review},
+  author={Choi, Wonchan and Zheng, Hua and Franklin, Patricia and Tulu, Bengisu},
+  journal={Health Informatics Journal},
+  volume={25},
+  number={3},
+  pages={984--1003},
+  year={2019},
+  publisher={SAGE Publications}
+}
+
+@article{choi2019older,
+  title={Older adults' health information behavior in everyday life settings},
+  author={Choi, Wonchan},
+  journal={Library \& information science research},
+  volume={41},
+  number={4},
+  pages={100983},
+  year={2019},
+  publisher={JAI}
+}
+
+@article{choi2020older,
+  title={Older adults' credibility assessment of online health information: An exploratory study using an extended typology of web credibility},
+  author={Choi, Wonchan},
+  journal={Journal of the Association for Information Science and Technology},
+  year={2020},
+  publisher={WILEY}
+}
+
+@article{choi2020systematic,
+  title={A systematic review of mobile health technologies to support self-management of concurrent diabetes and hypertension},
+  author={Choi, Wonchan and Wang, Shengang and Lee, Yura and Oh, Hyunkyoung and Zheng, Zhi},
+  journal={Journal of the American Medical Informatics Association},
+  volume={27},
   number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+  pages={939--945},
+  year={2020},
+  publisher={Oxford University Press}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@article{choi2022associations,
+  title={Associations between mastery of life and everyday life information-seeking behavior among older adults: Analysis of the Pew Research Center's information engaged and information wary survey data},
+  author={Choi, Wonchan and Park, Min Sook and Lee, Yura},
+  journal={Journal of the Association for Information Science and Technology},
+  volume={73},
+  number={3},
+  pages={393--406},
+  year={2022},
+  publisher={John Wiley \& Sons, Inc. Hoboken, USA}
+}
+
+@article{lee2022respite,
+  title={Respite service use among dementia and nondementia caregivers: Findings from the National Caregiving in the US 2015 Survey},
+  author={Lee, Yura and Choi, Wonchan and Park, Min Sook},
+  journal={Journal of Applied Gerontology},
+  volume={41},
+  number={6},
+  pages={1557--1567},
+  year={2022},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{choi2022design,
+  title={Design matters in web credibility assessment: Interactive design as a social validation tool for online health information seekers},
+  author={Choi, Wonchan and Kim, Sang-Yeon and Luo, Manman},
+  journal={Asian Communication Research},
+  volume={19},
+  number={3},
+  pages={119--138},
+  year={2022}
+}
+
+@article{choi2023developing,
+  title={Developing a platform-specific framework for web credibility assessment: A case of social Q\&A sites},
+  author={Choi, Wonchan and Stvilia, Besiki and Lee, Hyun Seung},
+  journal={Information Processing \& Management},
+  volume={60},
+  number={3},
+  pages={103321},
+  year={2023},
+  publisher={Pergamon}
+}
+
+@article{choi2023exploring,
+  title={Exploring applications and user experience with generative AI tools: A content analysis of reddit posts on ChatGPT},
+  author={Choi, Wonchan and Zhang, Yan and Stvilia, Besiki},
+  journal={Proceedings of the Association for Information Science and Technology},
+  volume={60},
+  number={1},
+  pages={543--546},
+  year={2023},
+  publisher={John Wiley \& Sons, Inc. Hoboken, USA}
 }
