--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,6 +12,12 @@
   publisher={Wiley Subscription Services, Inc., A Wiley Company Hoboken}
 }
 
+@article{choi2017effects,
+  title={Effects of User Interface Design and Task Complexity Level on User Experience in an mHealth Application},
+  author={Choi, Wonchan and Tulu, Bengisu},
+  year={2017}
+}
+
 @article{yang2016publication,
   title={Publication and citation patterns of Korean LIS research by subject areas},
   author={Yang, Kiduk and Lee, Jongwook and Choi, Wonchan},
@@ -50,6 +56,22 @@
   year={2015}
 }
 
+@article{choi2014college,
+  title={College Students' Value Structure of Choosing and Using Mobile Health/Wellness Applications: Preliminary Findings},
+  author={Choi, Wonchan and Stvilia, Besiki},
+  journal={iConference 2014 Proceedings},
+  year={2014},
+  publisher={iSchools}
+}
+
+@article{choi2015new,
+  title={A new framework for Web credibility assessment},
+  author={Choi, Wonchan and Stvilia, Besiki},
+  journal={IConference 2015 Proceedings},
+  year={2015},
+  publisher={iSchools}
+}
+
 @article{choi2013use,
   title={Use of mobile wellness applications and perception of quality},
   author={Choi, Wonchan and Stvilia, Besiki},
@@ -61,10 +83,35 @@
   publisher={Wiley Subscription Services, Inc., A Wiley Company Hoboken}
 }
 
+@incollection{baeg2012impact,
+  title={The impact of the public library on early reading achievement: using the Early Childhood Longitudinal Study (ECLS) 1st grade student sample},
+  author={Baeg, Jung Hoon and Choi, Wonchan and Lee, Dong Joon and Lee, Jisue},
+  booktitle={Proceedings of the 2012 iConference},
+  pages={538--540},
+  year={2012}
+}
+
 @article{choi2017effective,
   title={Effective use of user interface and user experience in an mHealth application},
   author={Choi, Wonchan and Tulu, Bengisu},
   year={2017}
+}
+
+@article{choi2016developing,
+  title={Developing an mHealth Application for Osteoarthritis Patients},
+  author={Choi, Wonchan and Tulu, Bengisu and Zheng, Hua and Franklin, Patricia},
+  year={2016}
+}
+
+@article{lee2013difference,
+  title={Difference in citation rates by subject areas of LIS in Korea},
+  author={Lee, Jongwook and Choi, Wonchan},
+  journal={Proceedings of the American Society for Information Science and Technology},
+  volume={50},
+  number={1},
+  pages={1--4},
+  year={2013},
+  publisher={Wiley Subscription Services, Inc., A Wiley Company Hoboken}
 }
 
 @article{choi2015web,
@@ -87,6 +134,20 @@
   year={2017}
 }
 
+@incollection{choi2012senior,
+  title={Senior citizens' credibility assessment of online health information: a proposal of a mixed methods study},
+  author={Choi, Wonchan},
+  booktitle={Proceedings of the 2012 iConference},
+  pages={620--622},
+  year={2012}
+}
+
+@article{zheng2017using,
+  title={Using mHealth App to Support TKR Decision Making for Knee Arthritis Patients},
+  author={Zheng, Hua and Tulu, Bengisu and Choi, Wonchan and Franklin, Patricia D},
+  year={2017}
+}
+
 @article{yang2015looking,
   title={Looking beyond the numbers: Bibliometric approach to analysis of LIS research in Korea},
   author={Yang, Kiduk and Lee, Jongwook and Choi, Wonchan},
@@ -96,6 +157,17 @@
   pages={241--264},
   year={2015},
   publisher={Korean Society For Library And Information Science}
+}
+
+@article{oh2013sonzogno,
+  title={The sonzogno digital library project},
+  author={Oh, Sanghee and Choi, Wonchan and Valisa, Silvia},
+  journal={Proceedings of the American Society for Information Science and Technology},
+  volume={50},
+  number={1},
+  pages={1--4},
+  year={2013},
+  publisher={Wiley Online Library}
 }
 
 @incollection{choi2013makes,
@@ -115,6 +187,28 @@
   pages={984--1003},
   year={2019},
   publisher={SAGE Publications}
+}
+
+@article{wang2019assessing,
+  title={Assessing the informativeness of user reviews on mobile health applications for chronic diseases},
+  author={Wang, Shengang and Lee, Hyun Seung and Choi, Wonchan},
+  journal={Proceedings of the Association for Information Science and Technology},
+  volume={56},
+  number={1},
+  pages={790--791},
+  year={2019},
+  publisher={John Wiley \& Sons, Inc. Hoboken, USA}
+}
+
+@article{choi2019analyzing,
+  title={Analyzing divergent methodologies for political fact checking: United States and South Korea},
+  author={Choi, Wonchan and Haigh, Maria},
+  journal={Proceedings of the Association for Information Science and Technology},
+  volume={56},
+  number={1},
+  pages={627--628},
+  year={2019},
+  publisher={John Wiley \& Sons, Inc. Hoboken, USA}
 }
 
 @article{choi2019older,
@@ -147,6 +241,58 @@
   publisher={Oxford University Press}
 }
 
+@article{oh2019challenges,
+  title={CHALLENGES IN SELF-MANAGEMENT AMONG OLDER ADULTS WITH HYPERTENSION AND DIABETES},
+  author={Oh, Hyunkyoung and Lee, Yura and Choi, Wonchan and Zheng, Zhi},
+  journal={Innovation in Aging},
+  volume={3},
+  number={Supplement\_1},
+  pages={S316--S317},
+  year={2019},
+  publisher={Oxford University Press US}
+}
+
+@article{choi2020validating,
+  title={Validating an extended typology of web credibility assessment},
+  author={Choi, Wonchan and Luo, Manman and Kim, Sang-Yeon},
+  journal={Proceedings of the Association for Information Science and Technology},
+  volume={57},
+  number={1},
+  pages={e357},
+  year={2020},
+  publisher={John Wiley \& Sons, Inc. Hoboken, USA}
+}
+
+@inproceedings{tulu2017framework,
+  title={A Framework to Design Mhealth Apps for Supporting Self-Management of Chronic Disease},
+  author={Tulu, Bengisu and Choi, Wonchan and Zheng, Hua and Franklin, Patricia},
+  booktitle={2017 Annual Research Meeting},
+  year={2017},
+  organization={AcademyHealth}
+}
+
+@article{chang2008trends,
+  title={Trends in Integrated Electronic Resource Management in Academic Libraries},
+  author={Chang, Durk-Hyun and Choi, Won-Chan},
+  journal={Journal of the Korean Society for Library and Information Science},
+  volume={42},
+  number={4},
+  pages={201--221},
+  year={2008},
+  publisher={Korean Society For Library And Information Science}
+}
+
+@article{chang2008development,
+  title={Development and testing of an e-journal evaluation model for university libraries},
+  author={Chang, Durk-Hyun and Choi, Won-Chan},
+  journal={Journal of the Korean Society for information Management},
+  volume={25},
+  number={4},
+  pages={165--184},
+  year={2008},
+  publisher={Korean Society for Information Management}
+}
+
 @article{choi2022associations,
   title={Associations between mastery of life and everyday life information-seeking behavior among older adults: Analysis of the Pew Research Center's information engaged and information wary survey data},
   author={Choi, Wonchan and Park, Min Sook and Lee, Yura},
@@ -158,6 +304,16 @@
   publisher={John Wiley \& Sons, Inc. Hoboken, USA}
 }
 
+@article{wang2021feature,
+  title={A feature-oriented analysis of developers’ descriptions and user reviews of top mHealth applications for diabetes and hypertension},
+  author={Wang, Shengang and Lee, Hyun Seung and Choi, Wonchan},
+  journal={International Journal of Medical Informatics},
+  volume={156},
+  pages={104598},
+  year={2021},
+  publisher={Elsevier}
+}
+
 @article{lee2022respite,
   title={Respite service use among dementia and nondementia caregivers: Findings from the National Caregiving in the US 2015 Survey},
   author={Lee, Yura and Choi, Wonchan and Park, Min Sook},
@@ -167,6 +323,23 @@
   pages={1557--1567},
   year={2022},
   publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{choi2022developing,
+  title={Developing a theoretical framework for web credibility assessment—A case of social Q\&A sites: preliminary findings},
+  author={Choi, Wonchan and Stvilia, Besiki},
+  year={2022},
+  publisher={iSchools}
+}
+
+@article{lee2021respite,
+  title={Respite Service Use among Dementia and Nondementia Caregivers: Findings from the Caregiving in the US 2015 Survey},
+  author={Lee, Yura and Choi, Wonchan and Park, Min Sook},
+  journal={Innovation in Aging},
+  volume={5},
+  number={Suppl 1},
+  pages={958},
+  year={2021}
 }
 
 @article{choi2022design,
@@ -190,6 +363,28 @@
   publisher={Pergamon}
 }
 
+@article{zheng2023exploration,
+  title={An Exploration of Robot-Mediated Tai Chi Exercise for Older Adults},
+  author={Zheng, Zhi and Oh, Hyunkyoung and Mim, Mayesha and Choi, Wonchan and Lee, Yura},
+  journal={Applied Sciences},
+  volume={13},
+  number={9},
+  pages={5306},
+  year={2023},
+  publisher={MDPI}
+}
+
+@article{park2022understanding,
+  title={Understanding the research landscape of information and communication technology integration in dementia-focused assistive technologies: Mining literature from 1970 to 2020},
+  author={Park, Min Sook and Lee, Yura and Choi, Wonchan},
+  journal={Gerontechnology},
+  volume={21},
+  number={1},
+  pages={1--18},
+  year={2022},
+  publisher={元智大學老人福祉科技研究中心}
+}
+
 @article{choi2023exploring,
   title={Exploring applications and user experience with generative AI tools: A content analysis of reddit posts on ChatGPT},
   author={Choi, Wonchan and Zhang, Yan and Stvilia, Besiki},
@@ -198,5 +393,71 @@
   number={1},
   pages={543--546},
   year={2023},
+  publisher={John Wiley \& Sons, Inc. Hoboken, USA}
+}
+
+@article{choi2023preliminary,
+  title={Preliminary findings on developing a scale for credibility assessment on interactive web platforms},
+  author={Choi, Wonchan and Zhu, Liya},
+  journal={Proceedings of the Association for Information Science and Technology},
+  volume={60},
+  number={1},
+  pages={929--931},
+  year={2023},
+  publisher={John Wiley \& Sons, Inc. Hoboken, USA}
+}
+
+@article{song2022asian,
+  title={Asian Communication Research},
+  author={Song, M and Hop, Hanguk Hip and Anderson, Crystal S and Oh, C and Dance, K-Pop and Choi, Wonchan and Kim, Sang-Yeon and Luo, Manman and Jang, Dayeoun and Lee, Byoungkwan and others},
+  year={2022}
+}
+
+@article{xie2024help,
+  title={Help-Seeking Situations Related to Visual Interactions on Mobile Platforms and Recommended Designs for Blind and Visually Impaired Users},
+  author={Xie, Iris and Choi, Wonchan and Wang, Shengang and Lee, Hyun Seung and Hong, Bo Hyun and Wang, Ning-Chiao and Cudjoe, Emmanuel Kwame},
+  journal={Journal of Imaging},
+  volume={10},
+  number={8},
+  pages={205},
+  year={2024},
+  publisher={MDPI}
+}
+
+@article{an2024college,
+  title={College Students' Metaphors for ChatGPT: An Exploratory Study},
+  author={An, Jiaxin and Bak, Hyerin and Choi, Wonchan and Zhang, Yan and Stvilia, Besiki},
+  journal={Proceedings of the Association for Information Science and Technology},
+  volume={61},
+  number={1},
+  pages={846--848},
+  year={2024},
+  publisher={John Wiley \& Sons, Inc. Hoboken, USA}
+}
+
+@article{choi2024reflective,
+  title={Reflective and Formative Indicators of Information Credibility on Social Media},
+  author={Choi, Wonchan and Zhu, Liya and Lee, Hyun Seung},
+  journal={Proceedings of the Association for Information Science and Technology},
+  volume={61},
+  number={1},
+  pages={874--876},
+  year={2024},
+  publisher={John Wiley \& Sons, Inc. Hoboken, USA}
+}
+
+@article{choi2024college,
+  title={College students' credibility assessments of GenAI-generated information for academic tasks: An interview study},
+  author={Choi, Wonchan and Bak, Hyerin and An, Jiaxin and Zhang, Yan and Stvilia, Besiki},
+  journal={Journal of the Association for Information Science and Technology},
+  year={2024},
+  publisher={John Wiley \& Sons, Inc. Hoboken, USA}
+}
+
+@article{xie2025investigating,
+  title={Investigating the interactions between individuals with disabilities and information retrieval systems: A review of help-seeking situations, search tactics, and design recommendations},
+  author={Xie, Iris and Choi, Wonchan and Lee, Hyun Seung and Hong, Bo Hyun and Wang, Shengang},
+  journal={Journal of the Association for Information Science and Technology},
+  year={2025},
   publisher={John Wiley \& Sons, Inc. Hoboken, USA}
 }
