--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -273,7 +273,7 @@
 
 @article{chang2008trends,
   title={Trends in Integrated Electronic Resource Management in Academic Libraries},
-  author={Chang, Durk-Hyun and Choi, Won-Chan},
+  author={Chang, Durk-Hyun and Choi, Wonchan},
   journal={Journal of the Korean Society for Library and Information Science},
   volume={42},
   number={4},
@@ -284,7 +284,7 @@
 
 @article{chang2008development,
   title={Development and testing of an e-journal evaluation model for university libraries},
-  author={Chang, Durk-Hyun and Choi, Won-Chan},
+  author={Chang, Durk-Hyun and Choi, Wonchan},
   journal={Journal of the Korean Society for information Management},
   volume={25},
   number={4},
@@ -446,6 +446,8 @@
   journal={Journal of the Association for Information Science and Technology},
   year={2024},
   publisher={John Wiley \& Sons, Inc. Hoboken, USA}
+  abstract={The study explored college students' use of generative artificial intelligence (GenAI) tools, such as ChatGPT, for academic tasks and their perceptions and behaviors in assessing the credibility of GenAI-generated information. Semistructured interviews were conducted with 25 college students in the United States. Interview transcripts were analyzed using the qualitative content analysis method. The study identified various types of academic tasks for which students used ChatGPT, including writing, programming, and learning. Guided by two models of credibility assessment Hilligoss and Rieh (2008); Metzger (2007), six factors influencing students' motivation and ability to assess the credibility of GenAI-generated information were identified (e.g., task salience, social pressure). We also identified 9 constructs (e.g., refinedness, explainability), 5 heuristics (e.g., inter- and intrasystem consistency heuristics), and 10 cues (e.g., version and tone) used by students to assess the credibility of GenAI-generated information. This study provides theoretical and empirical findings regarding students' use of GenAI tools in the academic context and credibility evaluation of the system outputs using rich, qualitative interview data.}
+  doi={https://doi.org/10.1002/asi.24978}
 }
 
 @article{xie2025investigating,
