--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -415,7 +415,9 @@
   number={8},
   pages={205},
   year={2024},
-  publisher={MDPI}
+  publisher={MDPI},
+  abstract={While it is common for blind and visually impaired (BVI) users to use mobile devices to search for information, little research has explored the accessibility issues they encounter in their interactions with information retrieval systems, in particular digital libraries (DLs). This study represents one of the most comprehensive research projects, investigating accessibility issues, especially help-seeking situations BVI users face in their DL search processes. One hundred and twenty BVI users were recruited to search for information in six DLs on four types of mobile devices (iPhone, iPad, Android phone, and Android tablet), and multiple data collection methods were employed: questionnaires, think-aloud protocols, transaction logs, and interviews. This paper reports part of a large-scale study, including the categories of help-seeking situations BVI users face in their interactions with DLs, focusing on seven types of help-seeking situations related to visual interactions on mobile platforms: difficulty finding a toggle-based search feature, difficulty understanding a video feature, difficulty navigating items on paginated sections, difficulty distinguishing collection labels from thumbnails, difficulty recognizing the content of images, difficulty recognizing the content of graphs, and difficulty interacting with multilayered windows. Moreover, corresponding design recommendations are also proposed: placing meaningful labels for icon-based features in an easy-to-access location, offering intuitive and informative video descriptions for video players, providing structure information about a paginated section, separating collection/item titles from thumbnail descriptions, incorporating artificial intelligence image/graph recognition mechanisms, and limiting screen reader interactions to active windows. Additionally, the limitations of the study and future research are discussed.},
+  doi={https://doi.org/10.3390/jimaging10080205}
 }
 
 @article{an2024college,
@@ -426,7 +428,9 @@
   number={1},
   pages={846--848},
   year={2024},
-  publisher={John Wiley \& Sons, Inc. Hoboken, USA}
+  publisher={John Wiley \& Sons, Inc. Hoboken, USA},
+  abstract={The introduction of ChatGPT has sparked significant interest and presented both great opportunities and challenges to higher education. While more students are using ChatGPT, little is known about their mental models for and sensemaking of the system, including the metaphors they use to understand the system. In this exploratory study, we interviewed 25 students at three universities in the US during the summer of 2023 to identify the metaphors they use for ChatGPT. Through qualitative analysis of the interview transcripts, we found that participants commonly used metaphors to make sense of ChatGPT. They compared ChatGPT to humans and popular technologies or tools, with being the most frequently Google mentioned. These findings highlight the potential for metaphor-based design and the development of AI literacy programs.},
+  doi={https://doi.org/10.1002/pra2.1116}
 }
 
 @article{choi2024reflective,
@@ -437,7 +441,9 @@
   number={1},
   pages={874--876},
   year={2024},
-  publisher={John Wiley \& Sons, Inc. Hoboken, USA}
+  publisher={John Wiley \& Sons, Inc. Hoboken, USA},
+  abstract={As part of a larger project to develop a scale for measuring web credibility perceptions, this poster reports on preliminary findings of a literature analysis to identify reflective and formative indicators of information credibility on social media. Of 90 papers found by a systematic database search and screening, this poster examines 20 papers focused on information credibility on microblogs (e.g., Twitter, Weibo) as a popular source for online users' information seeking. Our analysis identified 22 reflective indicators (e.g., fair, accurate) and 31 formative indicators (e.g., reputable, attractive), eight (e.g., trustworthy, unbiased) of which overlapped. Given the intertwined, often blurred border between these two sets of items, the coding scheme developed in the present study can help determine the relevance and type of the items. Future research directions are discussed.},
+  doi={https://doi.org/10.1002/pra2.1125}
 }
 
 @article{choi2024college,
