--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,7 +6,9 @@
   author={Xie, Iris and Choi, Wonchan and Lee, Hyun Seung and Hong, Bo Hyun and Wang, Shengang},
   journal={Journal of the Association for Information Science and Technology},
   year={2025},
-  publisher={John Wiley \& Sons, Inc. Hoboken, USA}
+  publisher={John Wiley \& Sons, Inc. Hoboken, USA},
+  abstract={People with disabilities face barriers when engaging with information retrieval (IR) systems due to designs that overlook their needs. This systematic literature review explores research for individuals with disabilities interacting with IR systems. Relevant theories concerning disabilities were examined, and the gap model was used as the theoretical framework that guided the review. This review covers relevant research published from 2000 to 2023, focusing on user groups with sensory, cognitive, and motor impairments. The main topics are help-seeking situations encountered by these user groups in various IR systems due to system design not meeting user needs, and search tactics applied by users with different types of disabilities corresponding to various help-seeking situations. Design recommendations for IR systems and platforms were also examined. Key limitations in existing research and the authors' reflections are highlighted, including a lack of theories on the interactions between people with disabilities and IR systems, imbalanced research on and misclassification between different types of impairments, unclear distinctions between accessibility and usability, unexplored IR issues in mobile environments, and inadequate existing IR system designs, along with the challenges posed by one-size-fits-all design. Further research opportunities are also proposed.},
+  doi={https://asistdl.onlinelibrary.wiley.com/doi/abs/10.1002/asi.24997}
 }
 
 @article{choi2025college,
@@ -17,12 +19,12 @@
   publisher={John Wiley \& Sons, Inc. Hoboken, USA},
   abstract={The study explored college students' use of generative artificial intelligence (GenAI) tools, such as ChatGPT, for academic tasks and their perceptions and behaviors in assessing the credibility of GenAI-generated information. Semistructured interviews were conducted with 25 college students in the United States. Interview transcripts were analyzed using the qualitative content analysis method. The study identified various types of academic tasks for which students used ChatGPT, including writing, programming, and learning. Guided by two models of credibility assessment Hilligoss and Rieh (2008); Metzger (2007), six factors influencing students' motivation and ability to assess the credibility of GenAI-generated information were identified (e.g., task salience, social pressure). We also identified 9 constructs (e.g., refinedness, explainability), 5 heuristics (e.g., inter- and intrasystem consistency heuristics), and 10 cues (e.g., version and tone) used by students to assess the credibility of GenAI-generated information. This study provides theoretical and empirical findings regarding students' use of GenAI tools in the academic context and credibility evaluation of the system outputs using rich, qualitative interview data.},
   doi={https://doi.org/10.1002/asi.24978},
-  selected={true}
-  pdf="2025-JASIST.pdf"
+  selected={true},
+  pdf={2025-JASIST.pdf}
 }
 
 @article{an2024college,
-  title={College Students' Metaphors for ChatGPT: An Exploratory Study},
+  title={College students' metaphors for ChatGPT: An exploratory study},
   author={An, Jiaxin and Bak, Hyerin and Choi, Wonchan and Zhang, Yan and Stvilia, Besiki},
   journal={Proceedings of the Association for Information Science and Technology},
   volume={61},
@@ -68,18 +70,23 @@
   number={3},
   pages={103321},
   year={2023},
-  publisher={Pergamon}
+  publisher={Pergamon},
+  abstract={Social question-and-answer (Q&A) sites have the potential to serve as a useful source of online information based on their content-focused and collaborative nature. Although previous research has examined various attributes of high-quality information on social Q&A sites (e.g., best answers), relatively less attention has been paid to what affects users’ credibility assessments of information in the social Q&A context. The present study developed a social Q&A platform-specific framework for web credibility assessment, including 21 criteria under six types of web credibility, based on a literature analysis and case study of two online Q&A communities, Stack Exchange and Wikipedia Reference Desk. Using the selected sites’ policies and guidelines (n = 46) as the source of evidence, the case study revealed that content-related attributes (e.g., evidence-based, pertinence) were most frequently identified (12 of 21 criteria) as potential cues and heuristics for web credibility assessments of social Q&A sites, followed by author-related (five of 21; e.g., reputation) and design-related (four of 21; e.g., engaging design) factors. Design-related criteria were rarely included in previous models of web credibility on social Q&A or similar peer-knowledge production platforms. However, our findings showing that both Stack Exchange and Wikipedia Reference Desk have policies regarding all four design-related criteria in our framework—engaging design, moderation, design appropriateness, and ease of use—indicate the potential influences of design features on users’ web credibility assessment on social Q&A sites. Some differences emerged between the two cases, such as policies regarding the answerer's credentials or semantic accuracy that are present on Wikipedia Reference Desk but absent on Stack Exchange. Such differences in the sites’ policies reflect how they position themselves as social Q&A communities—Wikipedia, of which Wikipedia Reference Desk is a part, as an encyclopedia, and Stack Exchange as a community-based platform for learning, sharing knowledge, and building careers of users.},
+  doi={https://doi.org/10.1016/j.ipm.2023.103321},
+  pdf={2023-IPM}
 }
 
 @article{zheng2023exploration,
-  title={An Exploration of Robot-Mediated Tai Chi Exercise for Older Adults},
+  title={An exploration of robot-mediated tai chi exercise for older adults},
   author={Zheng, Zhi and Oh, Hyunkyoung and Mim, Mayesha and Choi, Wonchan and Lee, Yura},
   journal={Applied Sciences},
   volume={13},
   number={9},
   pages={5306},
   year={2023},
-  publisher={MDPI}
+  publisher={MDPI},
+  abstract={In this fast-aging society, many older adults fail to meet the required level of exercise due to trainer shortages. Therefore, we developed a robot tutor to investigate the feasibility of robot-mediated exercise for older adults. Twenty older adults participated in an experimental study. A pre-exercise survey was used to assess their background. Each participant experienced a 30-min robot-led Tai Chi exercise followed by a post-exercise survey to evaluate the easiness of following the robot and expectations for future robot design. Participants’ Tai Chi performances were evaluated in terms of completion and accuracy. Associations between the surveys and the performance were also analyzed. All participants completed the study. Fifteen out of the twenty subjects had at least one chronic condition, and most practiced Tai Chi before the study but had never interacted with a robot. On average, the participants scored 93.09 and 85.21 out of 100 for movement completion and accuracy, respectively. Their initial movement accuracy was correlated with their attitude towards exercise. Most subjects reported that they could follow the robot’s movements and speeches well and were interested in using a robot tutor in the community. The study demonstrated the initial feasibility of robot-led Tai Chi exercise for older adults.},
+  doi={https://doi.org/10.3390/app13095306}
 }
 
 @article{choi2023exploring,
@@ -90,7 +97,10 @@
   number={1},
   pages={543--546},
   year={2023},
-  publisher={John Wiley \& Sons, Inc. Hoboken, USA}
+  publisher={John Wiley \& Sons, Inc. Hoboken, USA},
+  abstract={As part of a larger project, this paper reports on preliminary findings of a study exploring use cases of ChatGPT and associated behaviors and experiences among users of an online forum. Posts on a ChatGPT-related forum on Reddit (n = 452) were analyzed using qualitative content analysis. This paper reports on themes relevant to this study, including the types of tasks for which users used ChatGPT, user experiences, and perceived impacts of ChatGPT. ChatGPT was often used to facilitate various writing tasks (e.g., writing an essay), academic tasks (e.g., finding scientific references for a research paper), everyday tasks (e.g., creating a meal plan), and conversational purposes (e.g., having a simulated conversation about a past event). Users expressed positive (e.g., excited, amazed) and negative (e.g., fooled, concerned) feelings toward the technology. They raised various issues and problems with ChatGPT at the content (e.g., inaccuracy, incompletes) and system (e.g., unavailability, instability) levels. Users discussed the perceived impacts of ChatGPT on individuals (e.g., unemployment) and society (e.g., AI divide). Study findings can inform the design of policies and guidelines for mitigating AI problems and promoting the effective and ethical use of emerging AI technologies.},
+  doi={https://doi.org/10.1002/pra2.823},
+  pdf={2023-ProcASIST}
 }
 
 @article{choi2023preliminary,
