--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -219,7 +219,7 @@
 }
 
 @article{oh2019challenges,
-  title={CHALLENGES IN SELF-MANAGEMENT AMONG OLDER ADULTS WITH HYPERTENSION AND DIABETES},
+  title={Challenges in self-management among older adults with hypertension and diabetes},
   author={Oh, Hyunkyoung and Lee, Yura and Choi, Wonchan and Zheng, Zhi},
   journal={Innovation in Aging},
   volume={3},
