--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -49,7 +49,7 @@
   publisher={MDPI},
   abstract={While it is common for blind and visually impaired (BVI) users to use mobile devices to search for information, little research has explored the accessibility issues they encounter in their interactions with information retrieval systems, in particular digital libraries (DLs). This study represents one of the most comprehensive research projects, investigating accessibility issues, especially help-seeking situations BVI users face in their DL search processes. One hundred and twenty BVI users were recruited to search for information in six DLs on four types of mobile devices (iPhone, iPad, Android phone, and Android tablet), and multiple data collection methods were employed: questionnaires, think-aloud protocols, transaction logs, and interviews. This paper reports part of a large-scale study, including the categories of help-seeking situations BVI users face in their interactions with DLs, focusing on seven types of help-seeking situations related to visual interactions on mobile platforms: difficulty finding a toggle-based search feature, difficulty understanding a video feature, difficulty navigating items on paginated sections, difficulty distinguishing collection labels from thumbnails, difficulty recognizing the content of images, difficulty recognizing the content of graphs, and difficulty interacting with multilayered windows. Moreover, corresponding design recommendations are also proposed: placing meaningful labels for icon-based features in an easy-to-access location, offering intuitive and informative video descriptions for video players, providing structure information about a paginated section, separating collection/item titles from thumbnail descriptions, incorporating artificial intelligence image/graph recognition mechanisms, and limiting screen reader interactions to active windows. Additionally, the limitations of the study and future research are discussed.},
   doi={https://doi.org/10.3390/jimaging10080205},
-  pdf={2024-JImage.pdf}
+  pdf={2024-JImage.pdf},
   abbr={Journal}
 }
 
@@ -77,7 +77,7 @@
   publisher={Pergamon},
   abstract={Social question-and-answer (Q&A) sites have the potential to serve as a useful source of online information based on their content-focused and collaborative nature. Although previous research has examined various attributes of high-quality information on social Q&A sites (e.g., best answers), relatively less attention has been paid to what affects users’ credibility assessments of information in the social Q&A context. The present study developed a social Q&A platform-specific framework for web credibility assessment, including 21 criteria under six types of web credibility, based on a literature analysis and case study of two online Q&A communities, Stack Exchange and Wikipedia Reference Desk. Using the selected sites’ policies and guidelines (n = 46) as the source of evidence, the case study revealed that content-related attributes (e.g., evidence-based, pertinence) were most frequently identified (12 of 21 criteria) as potential cues and heuristics for web credibility assessments of social Q&A sites, followed by author-related (five of 21; e.g., reputation) and design-related (four of 21; e.g., engaging design) factors. Design-related criteria were rarely included in previous models of web credibility on social Q&A or similar peer-knowledge production platforms. However, our findings showing that both Stack Exchange and Wikipedia Reference Desk have policies regarding all four design-related criteria in our framework—engaging design, moderation, design appropriateness, and ease of use—indicate the potential influences of design features on users’ web credibility assessment on social Q&A sites. Some differences emerged between the two cases, such as policies regarding the answerer's credentials or semantic accuracy that are present on Wikipedia Reference Desk but absent on Stack Exchange. Such differences in the sites’ policies reflect how they position themselves as social Q&A communities—Wikipedia, of which Wikipedia Reference Desk is a part, as an encyclopedia, and Stack Exchange as a community-based platform for learning, sharing knowledge, and building careers of users.},
   doi={https://doi.org/10.1016/j.ipm.2023.103321},
-  pdf={2023-IPM}
+  pdf={2023-IPM.pdf}
 }
 
 @article{zheng2023exploration,
@@ -104,7 +104,7 @@
   publisher={John Wiley \& Sons, Inc. Hoboken, USA},
   abstract={As part of a larger project, this paper reports on preliminary findings of a study exploring use cases of ChatGPT and associated behaviors and experiences among users of an online forum. Posts on a ChatGPT-related forum on Reddit (n = 452) were analyzed using qualitative content analysis. This paper reports on themes relevant to this study, including the types of tasks for which users used ChatGPT, user experiences, and perceived impacts of ChatGPT. ChatGPT was often used to facilitate various writing tasks (e.g., writing an essay), academic tasks (e.g., finding scientific references for a research paper), everyday tasks (e.g., creating a meal plan), and conversational purposes (e.g., having a simulated conversation about a past event). Users expressed positive (e.g., excited, amazed) and negative (e.g., fooled, concerned) feelings toward the technology. They raised various issues and problems with ChatGPT at the content (e.g., inaccuracy, incompletes) and system (e.g., unavailability, instability) levels. Users discussed the perceived impacts of ChatGPT on individuals (e.g., unemployment) and society (e.g., AI divide). Study findings can inform the design of policies and guidelines for mitigating AI problems and promoting the effective and ethical use of emerging AI technologies.},
   doi={https://doi.org/10.1002/pra2.823},
-  pdf={2023-ProcASIST}
+  pdf={2023-ProcASIST.pdf}
 }
 
 @article{choi2023preliminary,
