--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,10 +9,11 @@
   publisher={John Wiley \& Sons, Inc. Hoboken, USA},
   abstract={People with disabilities face barriers when engaging with information retrieval (IR) systems due to designs that overlook their needs. This systematic literature review explores research for individuals with disabilities interacting with IR systems. Relevant theories concerning disabilities were examined, and the gap model was used as the theoretical framework that guided the review. This review covers relevant research published from 2000 to 2023, focusing on user groups with sensory, cognitive, and motor impairments. The main topics are help-seeking situations encountered by these user groups in various IR systems due to system design not meeting user needs, and search tactics applied by users with different types of disabilities corresponding to various help-seeking situations. Design recommendations for IR systems and platforms were also examined. Key limitations in existing research and the authors' reflections are highlighted, including a lack of theories on the interactions between people with disabilities and IR systems, imbalanced research on and misclassification between different types of impairments, unclear distinctions between accessibility and usability, unexplored IR issues in mobile environments, and inadequate existing IR system designs, along with the challenges posed by one-size-fits-all design. Further research opportunities are also proposed.},
   doi={https://asistdl.onlinelibrary.wiley.com/doi/abs/10.1002/asi.24997},
-  abbr={Journal}
+  abbr={AJP}
 }
 
 @article{choi2025college,
+  abbr={Journal},
   title={College students' credibility assessments of GenAI-generated information for academic tasks: An interview study},
   author={Choi, Wonchan and Bak, Hyerin and An, Jiaxin and Zhang, Yan and Stvilia, Besiki},
   journal={Journal of the Association for Information Science and Technology},
@@ -21,8 +22,7 @@
   abstract={The study explored college students' use of generative artificial intelligence (GenAI) tools, such as ChatGPT, for academic tasks and their perceptions and behaviors in assessing the credibility of GenAI-generated information. Semistructured interviews were conducted with 25 college students in the United States. Interview transcripts were analyzed using the qualitative content analysis method. The study identified various types of academic tasks for which students used ChatGPT, including writing, programming, and learning. Guided by two models of credibility assessment Hilligoss and Rieh (2008); Metzger (2007), six factors influencing students' motivation and ability to assess the credibility of GenAI-generated information were identified (e.g., task salience, social pressure). We also identified 9 constructs (e.g., refinedness, explainability), 5 heuristics (e.g., inter- and intrasystem consistency heuristics), and 10 cues (e.g., version and tone) used by students to assess the credibility of GenAI-generated information. This study provides theoretical and empirical findings regarding students' use of GenAI tools in the academic context and credibility evaluation of the system outputs using rich, qualitative interview data.},
   doi={https://doi.org/10.1002/asi.24978},
   selected={true},
-  pdf={2025-JASIST.pdf},
-  abbr={Journal}
+  pdf={2025-JASIST.pdf}
 }
 
 @article{an2024college,
