--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -13,7 +13,6 @@
 }
 
 @article{choi2025college,
-  abbr={Journal},
   title={College students' credibility assessments of GenAI-generated information for academic tasks: An interview study},
   author={Choi, Wonchan and Bak, Hyerin and An, Jiaxin and Zhang, Yan and Stvilia, Besiki},
   journal={Journal of the Association for Information Science and Technology},
@@ -22,20 +21,22 @@
   abstract={The study explored college students' use of generative artificial intelligence (GenAI) tools, such as ChatGPT, for academic tasks and their perceptions and behaviors in assessing the credibility of GenAI-generated information. Semistructured interviews were conducted with 25 college students in the United States. Interview transcripts were analyzed using the qualitative content analysis method. The study identified various types of academic tasks for which students used ChatGPT, including writing, programming, and learning. Guided by two models of credibility assessment Hilligoss and Rieh (2008); Metzger (2007), six factors influencing students' motivation and ability to assess the credibility of GenAI-generated information were identified (e.g., task salience, social pressure). We also identified 9 constructs (e.g., refinedness, explainability), 5 heuristics (e.g., inter- and intrasystem consistency heuristics), and 10 cues (e.g., version and tone) used by students to assess the credibility of GenAI-generated information. This study provides theoretical and empirical findings regarding students' use of GenAI tools in the academic context and credibility evaluation of the system outputs using rich, qualitative interview data.},
   doi={https://doi.org/10.1002/asi.24978},
   selected={true},
-  pdf={2025-JASIST.pdf}
+  pdf={2025-JASIST.pdf},
+  abbr={Journal}
 }
 
-@article{an2024college,
+@inproceedings{an2024college,
   title={College students' metaphors for ChatGPT: An exploratory study},
   author={An, Jiaxin and Bak, Hyerin and Choi, Wonchan and Zhang, Yan and Stvilia, Besiki},
-  journal={Proceedings of the Association for Information Science and Technology},
+  booktitle={Proceedings of the Association for Information Science and Technology},
   volume={61},
   number={1},
   pages={846--848},
   year={2024},
   publisher={John Wiley \& Sons, Inc. Hoboken, USA},
   abstract={The introduction of ChatGPT has sparked significant interest and presented both great opportunities and challenges to higher education. While more students are using ChatGPT, little is known about their mental models for and sensemaking of the system, including the metaphors they use to understand the system. In this exploratory study, we interviewed 25 students at three universities in the US during the summer of 2023 to identify the metaphors they use for ChatGPT. Through qualitative analysis of the interview transcripts, we found that participants commonly used metaphors to make sense of ChatGPT. They compared ChatGPT to humans and popular technologies or tools, with being the most frequently Google mentioned. These findings highlight the potential for metaphor-based design and the development of AI literacy programs.},
-  doi={https://doi.org/10.1002/pra2.1116}
+  doi={https://doi.org/10.1002/pra2.1116}, 
+  pdf=
 }
 
 @article{xie2024help,
@@ -105,7 +106,8 @@
   publisher={John Wiley \& Sons, Inc. Hoboken, USA},
   abstract={As part of a larger project, this paper reports on preliminary findings of a study exploring use cases of ChatGPT and associated behaviors and experiences among users of an online forum. Posts on a ChatGPT-related forum on Reddit (n = 452) were analyzed using qualitative content analysis. This paper reports on themes relevant to this study, including the types of tasks for which users used ChatGPT, user experiences, and perceived impacts of ChatGPT. ChatGPT was often used to facilitate various writing tasks (e.g., writing an essay), academic tasks (e.g., finding scientific references for a research paper), everyday tasks (e.g., creating a meal plan), and conversational purposes (e.g., having a simulated conversation about a past event). Users expressed positive (e.g., excited, amazed) and negative (e.g., fooled, concerned) feelings toward the technology. They raised various issues and problems with ChatGPT at the content (e.g., inaccuracy, incompletes) and system (e.g., unavailability, instability) levels. Users discussed the perceived impacts of ChatGPT on individuals (e.g., unemployment) and society (e.g., AI divide). Study findings can inform the design of policies and guidelines for mitigating AI problems and promoting the effective and ethical use of emerging AI technologies.},
   doi={https://doi.org/10.1002/pra2.823},
-  pdf={2023-ProcASIST.pdf},
+  pdf={2023-ASIST-ShortPaper.pdf},
+  slides={2023-ASIST-ShortPaper-Slides.pdf}
   selected={true}
 }
 
