--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -36,7 +36,8 @@
   publisher={John Wiley \& Sons, Inc. Hoboken, USA},
   abstract={The introduction of ChatGPT has sparked significant interest and presented both great opportunities and challenges to higher education. While more students are using ChatGPT, little is known about their mental models for and sensemaking of the system, including the metaphors they use to understand the system. In this exploratory study, we interviewed 25 students at three universities in the US during the summer of 2023 to identify the metaphors they use for ChatGPT. Through qualitative analysis of the interview transcripts, we found that participants commonly used metaphors to make sense of ChatGPT. They compared ChatGPT to humans and popular technologies or tools, with being the most frequently Google mentioned. These findings highlight the potential for metaphor-based design and the development of AI literacy programs.},
   doi={https://doi.org/10.1002/pra2.1116}, 
-  pdf=
+  pdf={2024-ASIST-Poster.pdf},
+  poster={}
 }
 
 @article{xie2024help,
@@ -92,7 +93,8 @@
   year={2023},
   publisher={MDPI},
   abstract={In this fast-aging society, many older adults fail to meet the required level of exercise due to trainer shortages. Therefore, we developed a robot tutor to investigate the feasibility of robot-mediated exercise for older adults. Twenty older adults participated in an experimental study. A pre-exercise survey was used to assess their background. Each participant experienced a 30-min robot-led Tai Chi exercise followed by a post-exercise survey to evaluate the easiness of following the robot and expectations for future robot design. Participants’ Tai Chi performances were evaluated in terms of completion and accuracy. Associations between the surveys and the performance were also analyzed. All participants completed the study. Fifteen out of the twenty subjects had at least one chronic condition, and most practiced Tai Chi before the study but had never interacted with a robot. On average, the participants scored 93.09 and 85.21 out of 100 for movement completion and accuracy, respectively. Their initial movement accuracy was correlated with their attitude towards exercise. Most subjects reported that they could follow the robot’s movements and speeches well and were interested in using a robot tutor in the community. The study demonstrated the initial feasibility of robot-led Tai Chi exercise for older adults.},
-  doi={https://doi.org/10.3390/app13095306}
+  doi={https://doi.org/10.3390/app13095306}, 
+  pdf={2023-AP.pdf}
 }
 
 @article{choi2023exploring,
@@ -119,7 +121,10 @@
   number={1},
   pages={929--931},
   year={2023},
-  publisher={John Wiley \& Sons, Inc. Hoboken, USA}
+  publisher={John Wiley \& Sons, Inc. Hoboken, USA},
+  doi={https://doi.org/10.1002/pra2.901},
+  pdf={2023-ASIST-Abstract},
+  poster={2023-ASIST-Poster}
 }
 
 @article{choi2022design,
