--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -36,8 +36,7 @@
   publisher={John Wiley \& Sons, Inc. Hoboken, USA},
   abstract={The introduction of ChatGPT has sparked significant interest and presented both great opportunities and challenges to higher education. While more students are using ChatGPT, little is known about their mental models for and sensemaking of the system, including the metaphors they use to understand the system. In this exploratory study, we interviewed 25 students at three universities in the US during the summer of 2023 to identify the metaphors they use for ChatGPT. Through qualitative analysis of the interview transcripts, we found that participants commonly used metaphors to make sense of ChatGPT. They compared ChatGPT to humans and popular technologies or tools, with being the most frequently Google mentioned. These findings highlight the potential for metaphor-based design and the development of AI literacy programs.},
   doi={https://doi.org/10.1002/pra2.1116}, 
-  pdf={2024-ASIST-Poster.pdf},
-  poster={}
+  pdf={2024-ASIST-Poster.pdf}
 }
 
 @article{xie2024help,
@@ -335,7 +334,7 @@
   publisher={Korean Society For Library And Information Science}
 }
 
-@article{choi2015new,
+@article{choi2015new-a,
   title={A new framework for Web credibility assessment},
   author={Choi, Wonchan and Stvilia, Besiki},
   journal={IConference 2015 Proceedings},
@@ -364,7 +363,7 @@
   year={2015}
 }
 
-@article{choi2015new,
+@article{choi2015new-b,
   title={New framework of web credibility assessment and an exploratory study of older adults' information behavior on the Web},
   author={Choi, Wonchan},
   year={2015}
